.provarCaches/00D410000011HE0EAM/objects/rstkf__syusersched__c.object
<CustomObject>
    <description>syusersched__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>externalid__c</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syusersched_desc__c</fullName>
        <description>syusersched_desc__c</description>
        <inlineHelpText>Brief description of this depreciation schedule.</inlineHelpText>
        <label>Schedule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syusersched_year01pct__c</fullName>
        <description>syusersched_year01pct__c</description>
        <inlineHelpText>Indicates the Depreciation Percentage value for 1st year.</inlineHelpText>
        <label>Year 01 Depreciation Percentage</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__syusersched_year02pct__c</fullName>
        <description>syusersched_year02pct__c</description>
        <inlineHelpText>Indicates the Depreciation Percentage value for 2nd year. This field can be greater than 0 only if number of years value is greater than or equal to 2.</inlineHelpText>
        <label>Year 02 Depreciation Percentage</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__syusersched_year03pct__c</fullName>
        <description>syusersched_year03pct</description>
        <inlineHelpText>Indicates the Depreciation Percentage value for 3rd year. This field can be greater than 0 only if number of years value is greater than or equal to 3.</inlineHelpText>
        <label>Year 03 Depreciation Percentage</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__syusersched_years__c</fullName>
        <description>syusersched_years__c</description>
        <inlineHelpText>Number of years the depreciation for the fixed asset is to be scheduled. Value must be between 1 and 20.</inlineHelpText>
        <label>Number of Years</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>User Defined Depreciation Schedule</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__syusersched_years__c</columns>
        <columns>rstkf__syusersched_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Depreciation Schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Defined Depreciation Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>